frontend/styles/styles.css
.doc-card {
    padding: 0 5px 5px 0;
}

.doc-card:hover .tag-container-compact {
    flex-wrap: wrap;
}

.doc-card:hover .doc-info-wrapper {
    position: absolute;
    bottom: 0;
}

.doc-card:hover .attribute-container {
    display: flex;
    flex-wrap: wrap;
}

.doc-card .attribute-container {
    display: none;
}

.doc-info-wrapper {
    width: 100%;
    background-color: #998787;
}

.inline-image {
    width: 100%;
    height: 100%;
    user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.image-container {
    width: 100%;
    height: auto;
    margin: 0 auto;
    position: relative;
    overflow-y: hidden;
    user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.tag-label {
    display: inline;
    border: 2px solid #CCF;
    margin: 2px;
    white-space: nowrap;
}

.word-wrapper {
    position: absolute;
}

.word-wrapper-selected .word-container {
    border: 4px dotted black;
}

.word-wrapper-error {
    background-color: rgba(255, 0, 0, 0.13);
}

.word-wrapper:hover .word-container {
    border: 3px solid black;
}

.mode-edit .word-wrapper:hover .word-dropdown {
    display: block;
}

.mode-delete .word-wrapper:hover .word-container {
    background-color: rgba(255, 0, 0, 0.6);
}

.word-container {
    width: 100%;
    height: 100%;
    border: 2px solid gray;
    z-index: 3;
}

.word-dropdown {
    position: absolute;
    display: none;
    background-color: white;
    border: 1px solid black;
    z-index: 9;
    width: max-content;
}

.word-dropdown-button {
    padding: 0;
    margin: 0;
    z-index: 9;
}

.draw-div {
    pointer-events: none;
    position: absolute;
    display: none;
    border: 2px dotted gray;
}

.v-dragged {
    background-color: rgba(100, 0, 0, 0.2);
    opacity: 0.5;
}

.v-drag-over-target {
    background-color: rgba(0, 150, 0, 0.5);
}

